fixed graph overflow

--- a/gym.css
+++ b/gym.css
@@ -34,6 +34,7 @@ body{
     border:none;
     border-radius: 15px;
     font: normal 20px 'Arial Narrow Bold';
+    box-sizing: border-box;
 }
 
 .block{
@@ -61,6 +62,10 @@ body{
 .block #prediction-output{
     text-align:center;
     font-size:12px;
+}
+
+#predictions{
+    overflow:auto;
 }
 
 .block #prediction-chart{
